# FlowVision

./: .gitignore  README.md
Auxiliar/: Fist_Neural_Net.ipynb  Fist_Neural_Nets_Project.ipynb  Heart_Neural_Net.ipynb  Neural_Nets_Fist.ipynb  Neural_Nets_Project_Pigmento_pelle.ipynb  pre-processing_fist.py
Core/: Debug.ipynb  Dockerfile  OSCClient.py  OSCServer.py  README.md  RaspyOSCListener.py  app.py  camera_test_main_optimised.py  co2.py  cuore.py  main.py  main_camera_test.py  main_con_dictionary.py  main_optimized.py  requirements.txt  senderMessage.py  simple_main.py  test_run_main.py  tracking1_funzia.py  tracking_script.py
Core/Legacy/: FlowVision.py  FlowVision_run_function.py  co2.py  test_run.py  tracking1_funzia.py
Core/OSCServer/: CMakeLists.txt
Core/OSCServer/head/: MainWindow.h
Core/OSCServer/src/: MainWindow.cpp
OSCServer/: OSCServer  OSCServer.pro  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
OSCServer/head/: gpioHandler.h  oscServer.h
OSCServer/src/: gpioHandler.cpp  oscServer.cpp
Processing/: Blinders.pde  FireMachine.pde  Light.pde  Palco.pde
Processing/Stage Front View/: Blinders.pde  FireMachine.pde  Lights.pde  Particle.pde  StageFrontView.pde  sketch.properties
Processing/Stage Top View/: Blinders.pde  FireMachine.pde  Light.pde  StageTopView.pde  sketch.properties
TestingOsc/: OSCClient.py  OSCEmulator.py  RaspyOSCListener.py
